<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_map_view"
        android:icon="@drawable/ic_map_24"
        android:title="@string/bottom_navigation_menu_map_view"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/nav_list_view"
        android:icon="@drawable/ic_view_list_24"
        android:title="@string/bottom_navigation_menu_list_view"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/nav_workmates"
        android:icon="@drawable/ic_group_24"
        android:title="@string/bottom_navigation_menu_workmates"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/ic_chat_24"
        android:title="@string/bottom_navigation_menu_workmates"
        app:showAsAction="always|withText"/>
    
</menu>