<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/business"
    android:backgroundTintMode="src_atop"
    android:backgroundTint="#AB000000">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_logo_go4lunch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/go4LunchTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="#FFFFFF"
        android:textSize="55sp"
        android:layout_below="@id/logoImageView"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tagLineTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tagline"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        android:textSize="15sp"
        android:layout_below="@id/go4LunchTextView"
        android:layout_centerHorizontal="true"/>


    <Button
        android:id="@+id/facebookLoginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:drawableLeft="@drawable/facebook"
        android:padding="10dp"
        android:text="@string/sign_in_facebook"
        android:textAllCaps="false"
        android:textColor="#3b5998"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/googleLoginButton"/>

    <Button
        android:id="@+id/googleLoginButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button"
        android:text="@string/sign_in_google"
        android:textAllCaps="false"
        android:textColor="#6E6D6D"
        android:textStyle="bold"
        android:drawableLeft="@drawable/googleplus"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="25dp"/>



</RelativeLayout>