<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/coordinatorLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_loginscreen_background"
    android:backgroundTintMode="src_atop"
    android:backgroundTint="#AB272525">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="260dp"
            android:layout_height="210dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_logo_go4lunch" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:text="@string/app_name"
            android:textColor="#ffffff"
            android:textSize="70sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:textColor="#ffffff"
            android:textSize="11sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/facebookLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/sign_in_facebook"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:drawableStart="@drawable/ic_login_facebook"
            android:padding="5dp"
            android:background="@drawable/shape_facebook_button"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/googleLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:text="@string/sign_in_google"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:drawableLeft="@drawable/ic_login_google"
            android:padding="10dp"
            android:background="@drawable/shape_google_button"
            android:onClick="onClick"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>