<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.RestaurantActivity">

    <ImageView
        android:id="@+id/restoPhotoImageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/restoOkFloatingActionButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:clickable="true"
        android:elevation="8dp"
        android:backgroundTint="#ffffff"
        android:src="@drawable/ic_check_unselected"
        app:fabSize="auto"
        android:focusable="true" />

    <FrameLayout
        android:id="@+id/detailframeLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="250dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/restoNameTextView"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            android:text="" />

        <androidx.appcompat.widget.AppCompatRatingBar

            android:id="@+id/restoRatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="7dp"
            android:numStars="3"
            android:text=""
            android:theme="@style/RatingBar"/>

        <TextView
            android:id="@+id/restoAddressTextView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textColor="#ffff"
            android:textStyle="bold|italic"
            android:layout_marginStart="5dp"
            android:layout_marginTop="35dp"
            android:text="" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/restoActionFrameLayout"
        android:layout_below="@id/detailframeLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/restoCallButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_horizontal"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:drawableTop="@drawable/ic_call_24"
            android:text="@string/call_button"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/restoStarButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/ic_star_24"
            android:text="@string/like_button"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/restoWebButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="30dp"
            android:background="#00FFFFFF"
            android:drawableTop="@drawable/ic_public_24"
            android:text="@string/website_button"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            tools:ignore="RtlCompat" />

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restoWorkmatesRecyclerView"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/restoActionFrameLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent" />

</RelativeLayout>